crates/vihaco-parser/tests/compile_errors/delegate_multi_field.rs
use vihaco_parser::Parse;
#[derive(Parse)]
enum Bad {
    Plain(f64),
    #[delegate]
    Multi(i64, f64),  // delegate on multi-field — error
}
fn main() {}
